# UTCA

./: Cargo.toml  README.md  index.html  input.new.toml  input.toml  utca.js
.cargo/: config.toml
.github/workflows/: continuous_deployment.yml  continuous_integration.yml
assets/: input.toml  manifest.json  sw.js
src/: app.rs  config.rs  dataset.rs  main.rs  position.rs  specie.rs  tag.rs  taxonomy.rs  triplet.rs  visitor.rs
src/input/: list.rs  mod.rs  text.rs  widgets.rs
src/output/: list.rs  mod.rs  plot copy.rs  plot.rs  table.rs  widgets.rs
src/output/widgets/: list.rs  mod.rs  plot.rs  table.rs
src/utils/: bound.rs  egui.rs  indexmap.rs  info.rs  mod.rs  ui.rs
