[package]
name = "utca"
version = "0.0.2"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
eframe = { version = "0.20.0", features = ["persistence"] }
egui = "0.20.0"
egui_extras = { version = "0.20.0", features = ["image"] }
indexmap = { version = "1.9.1", features = ["serde"] }
itertools = "0.10.1"
rfd = "0.10.0"
serde = { version = "1.0.147", features = ["derive", "std"] }
toml_edit = { version = "0.15.0", features = ["easy"] }
tracing = "0.1.37"
wasm-bindgen-futures = "0.4.33"
Inflector = "0.11.4"
egui-notify = "0.5.0"

egui_file = "0.4"
getrandom = { version = "0.2", features = ["js"] }

# nativ0.3.16get.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3.16"

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2.1"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
