[package]
name = "utca"
version = "0.0.4"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
eframe = { version = "0.20.0", features = ["default_fonts", "persistence"] }
egui = "0.20.0"
egui_extras = { version = "0.20.0", features = ["image"] }
indexmap = { version = "1.9.1", features = ["serde"] }
Inflector = "0.11.4"
itertools = "0.10.1"
serde = { version = "1.0.147", features = ["derive", "std"] }
toml_edit = { version = "0.16.0", features = ["easy"] }
tracing = "0.1.37"
syntect = { version = "5.0.0", default-features = false, features = [
    "default-fancy",
] }
linfa = "0.6.1"
linfa-hierarchical = "0.6.1"
linfa-kernel = "0.6.1"
linfa-datasets = { version = "0.6.1", features = ["iris"] }
ndarray = "0.15.6"

getrandom = { version = "0.2", features = ["js"] }
egui-notify = "0.5.0"
# rfd = "0.10.0"
# egui_file = "0.4"
# getrandom = { version = "0.2", features = ["js"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3.16"

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.33"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
